--- a/src/assets/css/dash.scss
+++ b/src/assets/css/dash.scss
@@ -4,6 +4,7 @@
 .main_header {
     gap: $s-2;
     justify-content: space-between;
+    flex-wrap: wrap;
     margin-bottom: $s-3;
     .breadcrumb {
         gap: $s-1;
