--- a/src/app/shared/components/dashboard-sidenav/dashboard-sidenav.component.html
+++ b/src/app/shared/components/dashboard-sidenav/dashboard-sidenav.component.html
@@ -9,7 +9,7 @@
           (click)="closeMenu()"
         >
           <span class="">
-            <i class='bx bx-home icon'></i>
+            <i class='bx bxs-dashboard icon'></i>
           </span>
           Overview
         </li>
