--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,8 +1,8 @@
 <!-- Alert -->
 <app-alert-popup
   *ngIf="isAlert"
-  [text]="alertMessage"
-  [color]="alertColor"
+  [alertMessage]="alertMessage"
+  [alertColor]="alertColor"
 ></app-alert-popup>
 
 <div class="auth">
