--- a/src/app/admin/components/admin-products/edit-admin-products/edit-admin-products.component.html
+++ b/src/app/admin/components/admin-products/edit-admin-products/edit-admin-products.component.html
@@ -1,8 +1,8 @@
 <!-- Alert -->
 <app-alert-popup
   *ngIf="isAlert"
-  [text]="alertMessage"
-  [color]="alertColor"
+  [alertMessage]="alertMessage"
+  [alertColor]="alertColor"
 ></app-alert-popup>
 
 <section class="main_header dis-flex">
