--- a/src/app/shared/components/confirm-modal/confirm-modal.component.html
+++ b/src/app/shared/components/confirm-modal/confirm-modal.component.html
@@ -20,6 +20,7 @@
                 Cancel
             </button>
             <button class="btn prim_btn" *ngIf="dataType === 'product'" (click)="deleteProduct()">Delete</button>
+            <button class="btn prim_btn" *ngIf="dataType === 'category'" (click)="deleteCategory()">Delete</button>
         </div>
     </div>
 </div>
